--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "api/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "pm2 start api/index.js",
+    "reload": "pm2 reload all"
   },
   "keywords": [
     "nodejs",
@@ -15,6 +17,7 @@
   "author": "Luis Bazzo",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0"
   }
