--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "pm2 start api/index.js",
-    "reload": "pm2 reload all"
+    "dev": "pm2 start api/index.js"
   },
   "keywords": [
     "nodejs",
@@ -19,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.0.0"
+    "mongodb": "^4.1.0",
+    "pm2": "^5.3.0"
   }
 }
